--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "es6-promise": "^4.2.4",
     "eslint-config-airbnb": "^16.1.0",
+    "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
@@ -13,6 +14,7 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -27,6 +29,7 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
+    "lint": "eslint src/",
     "eject": "react-scripts eject"
   }
 }
