--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.4",
+    "react-spinners": "^0.3.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-loop": "^4.2.4",
