--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "he": "^1.1.1",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
-    "node-sass-chokidar": "^1.2.2",
+    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
@@ -16,7 +16,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.1.3",
     "react-spinners": "^0.3.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -24,14 +24,16 @@
     "xml-js": "^1.6.2"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint src/",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
