--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "es6-promise": "^4.2.4",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-jest": "^22.1.3",
     "he": "^1.1.1",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
